[package]
name = "problems"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-compete.bin]
abc255-d = { alias = "abc255_d", problem = "https://atcoder.jp/contests/abc255/tasks/abc255_d" }
abc136-d = { alias = "abc136_d", problem = "https://atcoder.jp/contests/abc136/tasks/abc136_d" }
abc213-c = { alias = "abc213_c", problem = "https://atcoder.jp/contests/abc213/tasks/abc213_c" }
abc186-d = { alias = "abc186_d", problem = "https://atcoder.jp/contests/abc186/tasks/abc186_d" }
abc180-d = { alias = "abc180_d", problem = "https://atcoder.jp/contests/abc180/tasks/abc180_d" }
abc229-d = { alias = "abc229_d", problem = "https://atcoder.jp/contests/abc229/tasks/abc229_d" }
abc146-c = { alias = "abc146_c", problem = "https://atcoder.jp/contests/abc146/tasks/abc146_c" }
jsc2021-d = { alias = "jsc2021_d", problem = "https://atcoder.jp/contests/jsc2021/tasks/jsc2021_d" }
abc264-c = { alias = "abc264_c", problem = "https://atcoder.jp/contests/abc264/tasks/abc264_c" }
abc211-d = { alias = "abc211_d", problem = "https://atcoder.jp/contests/abc211/tasks/abc211_d" }
abc215-d = { alias = "abc215_d", problem = "https://atcoder.jp/contests/abc215/tasks/abc215_d" }
abc169-d = { alias = "abc169_d", problem = "https://atcoder.jp/contests/abc169/tasks/abc169_d" }
abc162-d = { alias = "abc162_d", problem = "https://atcoder.jp/contests/abc162/tasks/abc162_d" }
abc177-d = { alias = "abc177_d", problem = "https://atcoder.jp/contests/abc177/tasks/abc177_d" }
abc276-e = { alias = "abc276_e", problem = "https://atcoder.jp/contests/abc276/tasks/abc276_e" }
abc191-c = { alias = "abc191_c", problem = "https://atcoder.jp/contests/abc191/tasks/abc191_c" }
abc216-d = { alias = "abc216_d", problem = "https://atcoder.jp/contests/abc216/tasks/abc216_d" }
abc225-d = { alias = "abc225_d", problem = "https://atcoder.jp/contests/abc225/tasks/abc225_d" }
abc279-d = { alias = "abc279_d", problem = "https://atcoder.jp/contests/abc279/tasks/abc279_d" }
abc167-d = { alias = "abc167_d", problem = "https://atcoder.jp/contests/abc167/tasks/abc167_d" }
abc201-c = { alias = "abc201_c", problem = "https://atcoder.jp/contests/abc201/tasks/abc201_c" }
abc189-d = { alias = "abc189_d", problem = "https://atcoder.jp/contests/abc189/tasks/abc189_d" }
abc287-d = { alias = "abc287_d", problem = "https://atcoder.jp/contests/abc287/tasks/abc287_d" }
abc129-c = { alias = "abc129_c", problem = "https://atcoder.jp/contests/abc129/tasks/abc129_c" }
abc290-d = { alias = "abc290_d", problem = "https://atcoder.jp/contests/abc290/tasks/abc290_d" }
abc294-e = { alias = "abc294_e", problem = "https://atcoder.jp/contests/abc294/tasks/abc294_e" }
abc217-d = { alias = "abc217_d", problem = "https://atcoder.jp/contests/abc217/tasks/abc217_d" }
abc190-c = { alias = "abc190_c", problem = "https://atcoder.jp/contests/abc190/tasks/abc190_c" }
abc303-d = { alias = "abc303_d", problem = "https://atcoder.jp/contests/abc303/tasks/abc303_d" }
abc168-d = { alias = "abc168_d", problem = "https://atcoder.jp/contests/abc168/tasks/abc168_d" }
abc272-d = { alias = "abc272_d", problem = "https://atcoder.jp/contests/abc272/tasks/abc272_d" }
abc128-c = { alias = "abc128_c", problem = "https://atcoder.jp/contests/abc128/tasks/abc128_c" }
abc193-d = { alias = "abc193_d", problem = "https://atcoder.jp/contests/abc193/tasks/abc193_d" }
abc271-c = { alias = "abc271_c", problem = "https://atcoder.jp/contests/abc271/tasks/abc271_c" }
abc266-d = { alias = "abc266_d", problem = "https://atcoder.jp/contests/abc266/tasks/abc266_d" }
abc130-d = { alias = "abc130_d", problem = "https://atcoder.jp/contests/abc130/tasks/abc130_d" }
abc235-d = { alias = "abc235_d", problem = "https://atcoder.jp/contests/abc235/tasks/abc235_d" }
abc157-c = { alias = "abc157_c", problem = "https://atcoder.jp/contests/abc157/tasks/abc157_c" }
abc132-d = { alias = "abc132_d", problem = "https://atcoder.jp/contests/abc132/tasks/abc132_d" }
abc280-d = { alias = "abc280_d", problem = "https://atcoder.jp/contests/abc280/tasks/abc280_d" }
abc206-d = { alias = "abc206_d", problem = "https://atcoder.jp/contests/abc206/tasks/abc206_d" }
abc222-d = { alias = "abc222_d", problem = "https://atcoder.jp/contests/abc222/tasks/abc222_d" }
abc271-d = { alias = "abc271_d", problem = "https://atcoder.jp/contests/abc271/tasks/abc271_d" }
abc178-d = { alias = "abc178_d", problem = "https://atcoder.jp/contests/abc178/tasks/abc178_d" }
abc160-d = { alias = "abc160_d", problem = "https://atcoder.jp/contests/abc160/tasks/abc160_d" }
abc127-d = { alias = "abc127_d", problem = "https://atcoder.jp/contests/abc127/tasks/abc127_d" }
abc314-e = { alias = "abc314_e", problem = "https://atcoder.jp/contests/abc314/tasks/abc314_e" }
abc314-f = { alias = "abc314_f", problem = "https://atcoder.jp/contests/abc314/tasks/abc314_f" }
abc234-e = { alias = "abc234_e", problem = "https://atcoder.jp/contests/abc234/tasks/abc234_e" }
abc221-d = { alias = "abc221_d", problem = "https://atcoder.jp/contests/abc221/tasks/abc221_d" }
abc138-d = { alias = "abc138_d", problem = "https://atcoder.jp/contests/abc138/tasks/abc138_d" }
abc174-c = { alias = "abc174_c", problem = "https://atcoder.jp/contests/abc174/tasks/abc174_c" }
abc134-d = { alias = "abc134_d", problem = "https://atcoder.jp/contests/abc134/tasks/abc134_d" }
abc230-d = { alias = "abc230_d", problem = "https://atcoder.jp/contests/abc230/tasks/abc230_d" }
abc172-c = { alias = "abc172_c", problem = "https://atcoder.jp/contests/abc172/tasks/abc172_c" }
abc188-d = { alias = "abc188_d", problem = "https://atcoder.jp/contests/abc188/tasks/abc188_d" }
abc295-d = { alias = "abc295_d", problem = "https://atcoder.jp/contests/abc295/tasks/abc295_d" }
abc195-d = { alias = "abc195_d", problem = "https://atcoder.jp/contests/abc195/tasks/abc195_d" }
abc133-d = { alias = "abc133_d", problem = "https://atcoder.jp/contests/abc133/tasks/abc133_d" }
abc230-e = { alias = "abc230_e", problem = "https://atcoder.jp/contests/abc230/tasks/abc230_e" }
abc172-d = { alias = "abc172_d", problem = "https://atcoder.jp/contests/abc172/tasks/abc172_d" }
abc209-d = { alias = "abc209_d", problem = "https://atcoder.jp/contests/abc209/tasks/abc209_d" }
abc233-c = { alias = "abc233_c", problem = "https://atcoder.jp/contests/abc233/tasks/abc233_c" }
abc202-d = { alias = "abc202_d", problem = "https://atcoder.jp/contests/abc202/tasks/abc202_d" }
abc233-e = { alias = "abc233_e", problem = "https://atcoder.jp/contests/abc233/tasks/abc233_e" }
abc163-d = { alias = "abc163_d", problem = "https://atcoder.jp/contests/abc163/tasks/abc163_d" }
abc147-c = { alias = "abc147_c", problem = "https://atcoder.jp/contests/abc147/tasks/abc147_c" }
abc151-d = { alias = "abc151_d", problem = "https://atcoder.jp/contests/abc151/tasks/abc151_d" }
abc171-d = { alias = "abc171_d", problem = "https://atcoder.jp/contests/abc171/tasks/abc171_d" }
abc217-e = { alias = "abc217_e", problem = "https://atcoder.jp/contests/abc217/tasks/abc217_e" }
abc302-e = { alias = "abc302_e", problem = "https://atcoder.jp/contests/abc302/tasks/abc302_e" }
abc161-d = { alias = "abc161_d", problem = "https://atcoder.jp/contests/abc161/tasks/abc161_d" }
abc218-e = { alias = "abc218_e", problem = "https://atcoder.jp/contests/abc218/tasks/abc218_e" }
abc145-d = { alias = "abc145_d", problem = "https://atcoder.jp/contests/abc145/tasks/abc145_d" }
abc156-d = { alias = "abc156_d", problem = "https://atcoder.jp/contests/abc156/tasks/abc156_d" }
abc218-c = { alias = "abc218_c", problem = "https://atcoder.jp/contests/abc218/tasks/abc218_c" }
abc229-e = { alias = "abc229_e", problem = "https://atcoder.jp/contests/abc229/tasks/abc229_e" }
abc153-e = { alias = "abc153_e", problem = "https://atcoder.jp/contests/abc153/tasks/abc153_e" }
abc302-a = { alias = "abc302_a", problem = "https://atcoder.jp/contests/abc302/tasks/abc302_a" }
abc197-c = { alias = "abc197_c", problem = "https://atcoder.jp/contests/abc197/tasks/abc197_c" }
abc269-e = { alias = "abc269_e", problem = "https://atcoder.jp/contests/abc269/tasks/abc269_e" }
abc199-c = { alias = "abc199_c", problem = "https://atcoder.jp/contests/abc199/tasks/abc199_c" }
abc170-d = { alias = "abc170_d", problem = "https://atcoder.jp/contests/abc170/tasks/abc170_d" }
abc314-d = { alias = "abc314_d", problem = "https://atcoder.jp/contests/abc314/tasks/abc314_d" }
abc184-c = { alias = "abc184_c", problem = "https://atcoder.jp/contests/abc184/tasks/abc184_c" }
abc228-d = { alias = "abc228_d", problem = "https://atcoder.jp/contests/abc228/tasks/abc228_d" }
abc160-e = { alias = "abc160_e", problem = "https://atcoder.jp/contests/abc160/tasks/abc160_e" }
abc185-f = { alias = "abc185_f", problem = "https://atcoder.jp/contests/abc185/tasks/abc185_f" }
abc185-d = { alias = "abc185_d", problem = "https://atcoder.jp/contests/abc185/tasks/abc185_d" }
abc323-d = { alias = "abc323_d", problem = "https://atcoder.jp/contests/abc323/tasks/abc323_d" }
abc324-d = { alias = "abc324_d", problem = "https://atcoder.jp/contests/abc324/tasks/abc324_d" }
abc152-d = { alias = "abc152_d", problem = "https://atcoder.jp/contests/abc152/tasks/abc152_d" }
abc288-c = { alias = "abc288_c", problem = "https://atcoder.jp/contests/abc288/tasks/abc288_c" }
abc324-e = { alias = "abc324_e", problem = "https://atcoder.jp/contests/abc324/tasks/abc324_e" }
abc323-e = { alias = "abc323_e", problem = "https://atcoder.jp/contests/abc323/tasks/abc323_e" }
abc291-e = { alias = "abc291_e", problem = "https://atcoder.jp/contests/abc291/tasks/abc291_e" }
abc178-e = { alias = "abc178_e", problem = "https://atcoder.jp/contests/abc178/tasks/abc178_e" }
abc177-e = { alias = "abc177_e", problem = "https://atcoder.jp/contests/abc177/tasks/abc177_e" }
abc166-e = { alias = "abc166_e", problem = "https://atcoder.jp/contests/abc166/tasks/abc166_e" }
abc283-d = { alias = "abc283_d", problem = "https://atcoder.jp/contests/abc283/tasks/abc283_d" }
abc223-d = { alias = "abc223_d", problem = "https://atcoder.jp/contests/abc223/tasks/abc223_d" }
abc148-e = { alias = "abc148_e", problem = "https://atcoder.jp/contests/abc148/tasks/abc148_e" }
abc141-d = { alias = "abc141_d", problem = "https://atcoder.jp/contests/abc141/tasks/abc141_d" }
abc103-c = { alias = "abc103_c", problem = "https://atcoder.jp/contests/abc103/tasks/abc103_c" }
abc260-d = { alias = "abc260_d", problem = "https://atcoder.jp/contests/abc260/tasks/abc260_d" }
abc327-d = { alias = "abc327_d", problem = "https://atcoder.jp/contests/abc327/tasks/abc327_d" }
abc293-d = { alias = "abc293_d", problem = "https://atcoder.jp/contests/abc293/tasks/abc293_d" }
abc260-c = { alias = "abc260_c", problem = "https://atcoder.jp/contests/abc260/tasks/abc260_c" }
abc112-d = { alias = "abc112_d", problem = "https://atcoder.jp/contests/abc112/tasks/abc112_d" }
abc212-d = { alias = "abc212_d", problem = "https://atcoder.jp/contests/abc212/tasks/abc212_d" }
abc171-e = { alias = "abc171_e", problem = "https://atcoder.jp/contests/abc171/tasks/abc171_e" }
abc293-c = { alias = "abc293_c", problem = "https://atcoder.jp/contests/abc293/tasks/abc293_c" }
abc142-d = { alias = "abc142_d", problem = "https://atcoder.jp/contests/abc142/tasks/abc142_d" }
abc194-d = { alias = "abc194_d", problem = "https://atcoder.jp/contests/abc194/tasks/abc194_d" }
arc079-b = { alias = "arc079_b", problem = "https://atcoder.jp/contests/arc079/tasks/arc079_b" }
abc204-d = { alias = "abc204_d", problem = "https://atcoder.jp/contests/abc204/tasks/abc204_d" }
abc197-d = { alias = "abc197_d", problem = "https://atcoder.jp/contests/abc197/tasks/abc197_d" }
abc231-d = { alias = "abc231_d", problem = "https://atcoder.jp/contests/abc231/tasks/abc231_d" }
abc082-b = { alias = "abc082_b", problem = "https://atcoder.jp/contests/abc082/tasks/abc082_b" }
abc239-e = { alias = "abc239_e", problem = "https://atcoder.jp/contests/abc239/tasks/abc239_e" }
abc291-d = { alias = "abc291_d", problem = "https://atcoder.jp/contests/abc291/tasks/abc291_d" }
abc140-d = { alias = "abc140_d", problem = "https://atcoder.jp/contests/abc140/tasks/abc140_d" }
abc216-e = { alias = "abc216_e", problem = "https://atcoder.jp/contests/abc216/tasks/abc216_e" }
abc154-d = { alias = "abc154_d", problem = "https://atcoder.jp/contests/abc154/tasks/abc154_d" }
abc334-d = { alias = "abc334_d", problem = "https://atcoder.jp/contests/abc334/tasks/abc334_d" }
abc324-c = { alias = "abc324_c", problem = "https://atcoder.jp/contests/abc324/tasks/abc324_c" }
abc306-d = { alias = "abc306_d", problem = "https://atcoder.jp/contests/abc306/tasks/abc306_d" }
abc302-d = { alias = "abc302_d", problem = "https://atcoder.jp/contests/abc302/tasks/abc302_d" }
abc340-d = { alias = "abc340_d", problem = "https://atcoder.jp/contests/abc340/tasks/abc340_d" }
abc351-d = { alias = "abc351_d", problem = "https://atcoder.jp/contests/abc351/tasks/abc351_d" }
abc341-d = { alias = "abc341_d", problem = "https://atcoder.jp/contests/abc341/tasks/abc341_d" }
abc244-e = { alias = "abc244_e", problem = "https://atcoder.jp/contests/abc244/tasks/abc244_e" }
abc236-d = { alias = "abc236_d", problem = "https://atcoder.jp/contests/abc236/tasks/abc236_d" }
abc277-e = { alias = "abc277_e", problem = "https://atcoder.jp/contests/abc277/tasks/abc277_e" }
abc282-d = { alias = "abc282_d", problem = "https://atcoder.jp/contests/abc282/tasks/abc282_d" }
abc287-e = { alias = "abc287_e", problem = "https://atcoder.jp/contests/abc287/tasks/abc287_e" }
abc336-d = { alias = "abc336_d", problem = "https://atcoder.jp/contests/abc336/tasks/abc336_d" }
abc347-c = { alias = "abc347_c", problem = "https://atcoder.jp/contests/abc347/tasks/abc347_c" }
abc342-d = { alias = "abc342_d", problem = "https://atcoder.jp/contests/abc342/tasks/abc342_d" }
abc357-d = { alias = "abc357_d", problem = "https://atcoder.jp/contests/abc357/tasks/abc357_d" }
abc127-f = { alias = "abc127_f", problem = "https://atcoder.jp/contests/abc127/tasks/abc127_f" }
abc313-c = { alias = "abc313_c", problem = "https://atcoder.jp/contests/abc313/tasks/abc313_c" }
abc238-d = { alias = "abc238_d", problem = "https://atcoder.jp/contests/abc238/tasks/abc238_d" }
abc333-e = { alias = "abc333_e", problem = "https://atcoder.jp/contests/abc333/tasks/abc333_e" }
abc263-d = { alias = "abc263_d", problem = "https://atcoder.jp/contests/abc263/tasks/abc263_d" }
abc219-d = { alias = "abc219_d", problem = "https://atcoder.jp/contests/abc219/tasks/abc219_d" }
abc246-d = { alias = "abc246_d", problem = "https://atcoder.jp/contests/abc246/tasks/abc246_d" }
abc264-e = { alias = "abc264_e", problem = "https://atcoder.jp/contests/abc264/tasks/abc264_e" }
abc269-d = { alias = "abc269_d", problem = "https://atcoder.jp/contests/abc269/tasks/abc269_d" }
abc339-d = { alias = "abc339_d", problem = "https://atcoder.jp/contests/abc339/tasks/abc339_d" }
abc387-a = { alias = "abc387_a", problem = "https://atcoder.jp/contests/abc387/tasks/abc387_a" }
abc381-d = { alias = "abc381_d", problem = "https://atcoder.jp/contests/abc381/tasks/abc381_d" }
abc387-d = { alias = "abc387_d", problem = "https://atcoder.jp/contests/abc387/tasks/abc387_d" }
abc208-d = { alias = "abc208_d", problem = "https://atcoder.jp/contests/abc208/tasks/abc208_d" }
abc165-c = { alias = "abc165_c", problem = "https://atcoder.jp/contests/abc165/tasks/abc165_c" }
arc091-b = { alias = "arc091_b", problem = "https://atcoder.jp/contests/arc091/tasks/arc091_b" }
abc367-d = { alias = "abc367_d", problem = "https://atcoder.jp/contests/abc367/tasks/abc367_d" }
abc192-e = { alias = "abc192_e", problem = "https://atcoder.jp/contests/abc192/tasks/abc192_e" }
abc275-e = { alias = "abc275_e", problem = "https://atcoder.jp/contests/abc275/tasks/abc275_e" }
abc227-d = { alias = "abc227_d", problem = "https://atcoder.jp/contests/abc227/tasks/abc227_d" }
abc080-c = { alias = "abc080_c", problem = "https://atcoder.jp/contests/abc080/tasks/abc080_c" }
abc198-e = { alias = "abc198_e", problem = "https://atcoder.jp/contests/abc198/tasks/abc198_e" }
abc387-c = { alias = "abc387_c", problem = "https://atcoder.jp/contests/abc387/tasks/abc387_c" }
abc117-d = { alias = "abc117_d", problem = "https://atcoder.jp/contests/abc117/tasks/abc117_d" }
abc336-e = { alias = "abc336_e", problem = "https://atcoder.jp/contests/abc336/tasks/abc336_e" }
arc081-b = { alias = "arc081_b", problem = "https://atcoder.jp/contests/arc081/tasks/arc081_b" }
abc343-d = { alias = "abc343_d", problem = "https://atcoder.jp/contests/abc343/tasks/abc343_d" }
abc340-e = { alias = "abc340_e", problem = "https://atcoder.jp/contests/abc340/tasks/abc340_e" }
abc339-e = { alias = "abc339_e", problem = "https://atcoder.jp/contests/abc339/tasks/abc339_e" }
abc343-f = { alias = "abc343_f", problem = "https://atcoder.jp/contests/abc343/tasks/abc343_f" }
abc272-e = { alias = "abc272_e", problem = "https://atcoder.jp/contests/abc272/tasks/abc272_e" }
abc338-d = { alias = "abc338_d", problem = "https://atcoder.jp/contests/abc338/tasks/abc338_d" }
abc355-d = { alias = "abc355_d", problem = "https://atcoder.jp/contests/abc355/tasks/abc355_d" }
abc320-e = { alias = "abc320_e", problem = "https://atcoder.jp/contests/abc320/tasks/abc320_e" }
abc184-d = { alias = "abc184_d", problem = "https://atcoder.jp/contests/abc184/tasks/abc184_d" }
abc179-d = { alias = "abc179_d", problem = "https://atcoder.jp/contests/abc179/tasks/abc179_d" }
abc257-e = { alias = "abc257_e", problem = "https://atcoder.jp/contests/abc257/tasks/abc257_e" }
abc259-e = { alias = "abc259_e", problem = "https://atcoder.jp/contests/abc259/tasks/abc259_e" }
abc271-e = { alias = "abc271_e", problem = "https://atcoder.jp/contests/abc271/tasks/abc271_e" }
abc255-e = { alias = "abc255_e", problem = "https://atcoder.jp/contests/abc255/tasks/abc255_e" }
abc293-e = { alias = "abc293_e", problem = "https://atcoder.jp/contests/abc293/tasks/abc293_e" }
abc258-e = { alias = "abc258_e", problem = "https://atcoder.jp/contests/abc258/tasks/abc258_e" }
abc238-c = { alias = "abc238_c", problem = "https://atcoder.jp/contests/abc238/tasks/abc238_c" }
abc358-e = { alias = "abc358_e", problem = "https://atcoder.jp/contests/abc358/tasks/abc358_e" }
abc366-d = { alias = "abc366_d", problem = "https://atcoder.jp/contests/abc366/tasks/abc366_d" }
abc352-d = { alias = "abc352_d", problem = "https://atcoder.jp/contests/abc352/tasks/abc352_d" }
abc342-e = { alias = "abc342_e", problem = "https://atcoder.jp/contests/abc342/tasks/abc342_e" }
abc359-e = { alias = "abc359_e", problem = "https://atcoder.jp/contests/abc359/tasks/abc359_e" }
abc393-f = { alias = "abc393_f", problem = "https://atcoder.jp/contests/abc393/tasks/abc393_f" }
abc392-f = { alias = "abc392_f", problem = "https://atcoder.jp/contests/abc392/tasks/abc392_f" }
abc391-f = { alias = "abc391_f", problem = "https://atcoder.jp/contests/abc391/tasks/abc391_f" }
abc396-e = { alias = "abc396_e", problem = "https://atcoder.jp/contests/abc396/tasks/abc396_e" }
abc371-e = { alias = "abc371_e", problem = "https://atcoder.jp/contests/abc371/tasks/abc371_e" }
abc380-e = { alias = "abc380_e", problem = "https://atcoder.jp/contests/abc380/tasks/abc380_e" }
abc353-e = { alias = "abc353_e", problem = "https://atcoder.jp/contests/abc353/tasks/abc353_e" }
abc377-d = { alias = "abc377_d", problem = "https://atcoder.jp/contests/abc377/tasks/abc377_d" }
abc381-e = { alias = "abc381_e", problem = "https://atcoder.jp/contests/abc381/tasks/abc381_e" }
abc362-e = { alias = "abc362_e", problem = "https://atcoder.jp/contests/abc362/tasks/abc362_e" }
abc350-e = { alias = "abc350_e", problem = "https://atcoder.jp/contests/abc350/tasks/abc350_e" }
abc300-e = { alias = "abc300_e", problem = "https://atcoder.jp/contests/abc300/tasks/abc300_e" }
abc325-d = { alias = "abc325_d", problem = "https://atcoder.jp/contests/abc325/tasks/abc325_d" }
abc282-c = { alias = "abc282_c", problem = "https://atcoder.jp/contests/abc282/tasks/abc282_c" }
abc361-c = { alias = "abc361_c", problem = "https://atcoder.jp/contests/abc361/tasks/abc361_c" }
abc337-d = { alias = "abc337_d", problem = "https://atcoder.jp/contests/abc337/tasks/abc337_d" }
abc352-e = { alias = "abc352_e", problem = "https://atcoder.jp/contests/abc352/tasks/abc352_e" }
abc415-d = { alias = "abc415_d", problem = "https://atcoder.jp/contests/abc415/tasks/abc415_d" }
abc379-c = { alias = "abc379_c", problem = "https://atcoder.jp/contests/abc379/tasks/abc379_c" }
abc413-d = { alias = "abc413_d", problem = "https://atcoder.jp/contests/abc413/tasks/abc413_d" }
abc372-e = { alias = "abc372_e", problem = "https://atcoder.jp/contests/abc372/tasks/abc372_e" }
abc182-e = { alias = "abc182_e", problem = "https://atcoder.jp/contests/abc182/tasks/abc182_e" }
abc410-d = { alias = "abc410_d", problem = "https://atcoder.jp/contests/abc410/tasks/abc410_d" }
abc410-e = { alias = "abc410_e", problem = "https://atcoder.jp/contests/abc410/tasks/abc410_e" }
abc420-d = { alias = "abc420_d", problem = "https://atcoder.jp/contests/abc420/tasks/abc420_d" }
abc420-e = { alias = "abc420_e", problem = "https://atcoder.jp/contests/abc420/tasks/abc420_e" }
abc416-d = { alias = "abc416_d", problem = "https://atcoder.jp/contests/abc416/tasks/abc416_d" }
abc415-e = { alias = "abc415_e", problem = "https://atcoder.jp/contests/abc415/tasks/abc415_e" }
abc399-d = { alias = "abc399_d", problem = "https://atcoder.jp/contests/abc399/tasks/abc399_d" }
abc401-d = { alias = "abc401_d", problem = "https://atcoder.jp/contests/abc401/tasks/abc401_d" }
abc321-d = { alias = "abc321_d", problem = "https://atcoder.jp/contests/abc321/tasks/abc321_d" }
abc297-e = { alias = "abc297_e", problem = "https://atcoder.jp/contests/abc297/tasks/abc297_e" }
abc241-d = { alias = "abc241_d", problem = "https://atcoder.jp/contests/abc241/tasks/abc241_d"}
abc408-e = { alias = "abc408_e", problem = "https://atcoder.jp/contests/abc408/tasks/abc408_e"}
abc198-d = { alias = "abc198_d", problem = "https://atcoder.jp/contests/abc198/tasks/abc198_d"}
abc273-d = { alias = "abc273_d", problem = "https://atcoder.jp/contests/abc273/tasks/abc273_d"}
abc310-e = { alias = "abc310_e", problem = "https://atcoder.jp/contests/abc310/tasks/abc310_e"}
abc319-c = { alias = "abc319_c", problem = "https://atcoder.jp/contests/abc319/tasks/abc319_c"}
abc329-f = { alias = "abc329_f", problem = "https://atcoder.jp/contests/abc329/tasks/abc329_f"}
abc286-e = { alias = "abc286_e", problem = "https://atcoder.jp/contests/abc286/tasks/abc286_e"}
abc418-e = { alias = "abc418_e", problem = "https://atcoder.jp/contests/abc418/tasks/abc418_e"}

[[bin]]
name = "abc255-d"
path = "./src/bin/abc255_d.rs"

[[bin]]
name = "abc136-d"
path = "src/bin/abc136_d.rs"

[[bin]]
name = "abc213-c"
path = "src/bin/abc213_c.rs"

[[bin]]
name = "abc186-d"
path = "src/bin/abc186_d.rs"

[[bin]]
name = "abc180-d"
path = "src/bin/abc180_d.rs"

[[bin]]
name = "abc229-d"
path = "src/bin/abc229_d.rs"

[[bin]]
name = "abc146-c"
path = "src/bin/abc146_c.rs"

[[bin]]
name = "jsc2021-d"
path = "src/bin/jsc2021_d.rs"

[[bin]]
name = "abc264-c"
path = "src/bin/abc264_c.rs"

[[bin]]
name = "abc211-d"
path = "src/bin/abc211_d.rs"

[[bin]]
name = "abc215-d"
path = "src/bin/abc215_d.rs"

[[bin]]
name = "abc169-d"
path = "src/bin/abc169_d.rs"

[[bin]]
name = "abc162-d"
path = "src/bin/abc162_d.rs"

[[bin]]
name = "abc177-d"
path = "src/bin/abc177_d.rs"

[[bin]]
name = "abc276-e"
path = "src/bin/abc276_e.rs"

[[bin]]
name = "abc191-c"
path = "src/bin/abc191_c.rs"

[[bin]]
name = "abc216-d"
path = "src/bin/abc216_d.rs"

[[bin]]
name = "abc225-d"
path = "src/bin/abc225_d.rs"

[[bin]]
name = "abc279-d"
path = "src/bin/abc279_d.rs"

[[bin]]
name = "abc167-d"
path = "src/bin/abc167_d.rs"

[[bin]]
name = "abc201-c"
path = "src/bin/abc201_c.rs"

[[bin]]
name = "abc189-d"
path = "src/bin/abc189_d.rs"

[[bin]]
name = "abc287-d"
path = "src/bin/abc287_d.rs"

[[bin]]
name = "abc129-c"
path = "src/bin/abc129_c.rs"

[[bin]]
name = "abc290-d"
path = "src/bin/abc290_d.rs"

[[bin]]
name = "abc294-e"
path = "src/bin/abc294_e.rs"

[[bin]]
name = "abc217-d"
path = "src/bin/abc217_d.rs"

[[bin]]
name = "abc190-c"
path = "src/bin/abc190_c.rs"

[[bin]]
name = "abc303-d"
path = "src/bin/abc303_d.rs"

[[bin]]
name = "abc168-d"
path = "src/bin/abc168_d.rs"

[[bin]]
name = "abc272-d"
path = "src/bin/abc272_d.rs"

[[bin]]
name = "abc128-c"
path = "src/bin/abc128_c.rs"

[[bin]]
name = "abc193-d"
path = "src/bin/abc193_d.rs"

[[bin]]
name = "abc271-c"
path = "src/bin/abc271_c.rs"

[[bin]]
name = "abc266-d"
path = "src/bin/abc266_d.rs"

[[bin]]
name = "abc130-d"
path = "src/bin/abc130_d.rs"

[[bin]]
name = "abc235-d"
path = "src/bin/abc235_d.rs"

[[bin]]
name = "abc157-c"
path = "src/bin/abc157_c.rs"

[[bin]]
name = "abc132-d"
path = "src/bin/abc132_d.rs"

[[bin]]
name = "abc280-d"
path = "src/bin/abc280_d.rs"

[[bin]]
name = "abc206-d"
path = "src/bin/abc206_d.rs"

[[bin]]
name = "abc222-d"
path = "src/bin/abc222_d.rs"

[[bin]]
name = "abc271-d"
path = "src/bin/abc271_d.rs"

[[bin]]
name = "abc178-d"
path = "src/bin/abc178_d.rs"

[[bin]]
name = "abc160-d"
path = "src/bin/abc160_d.rs"

[[bin]]
name = "abc127-d"
path = "src/bin/abc127_d.rs"

[[bin]]
name = "abc314-e"
path = "src/bin/abc314_e.rs"

[[bin]]
name = "abc314-f"
path = "src/bin/abc314_f.rs"

[[bin]]
name = "abc234-e"
path = "src/bin/abc234_e.rs"

[[bin]]
name = "abc221-d"
path = "src/bin/abc221_d.rs"

[[bin]]
name = "abc138-d"
path = "src/bin/abc138_d.rs"

[[bin]]
name = "abc174-c"
path = "src/bin/abc174_c.rs"

[[bin]]
name = "abc134-d"
path = "src/bin/abc134_d.rs"

[[bin]]
name = "abc230-d"
path = "src/bin/abc230_d.rs"

[[bin]]
name = "abc172-c"
path = "src/bin/abc172_c.rs"

[[bin]]
name = "abc188-d"
path = "src/bin/abc188_d.rs"

[[bin]]
name = "abc295-d"
path = "src/bin/abc295_d.rs"

[[bin]]
name = "abc195-d"
path = "src/bin/abc195_d.rs"

[[bin]]
name = "abc133-d"
path = "src/bin/abc133_d.rs"

[[bin]]
name = "abc230-e"
path = "src/bin/abc230_e.rs"

[[bin]]
name = "abc172-d"
path = "src/bin/abc172_d.rs"

[[bin]]
name = "abc209-d"
path = "src/bin/abc209_d.rs"

[[bin]]
name = "abc233-c"
path = "src/bin/abc233_c.rs"

[[bin]]
name = "abc202-d"
path = "src/bin/abc202_d.rs"

[[bin]]
name = "abc233-e"
path = "src/bin/abc233_e.rs"

[[bin]]
name = "abc163-d"
path = "src/bin/abc163_d.rs"

[[bin]]
name = "abc147-c"
path = "src/bin/abc147_c.rs"

[[bin]]
name = "abc151-d"
path = "src/bin/abc151_d.rs"

[[bin]]
name = "abc171-d"
path = "src/bin/abc171_d.rs"

[[bin]]
name = "abc217-e"
path = "src/bin/abc217_e.rs"

[[bin]]
name = "abc302-e"
path = "src/bin/abc302_e.rs"

[[bin]]
name = "abc161-d"
path = "src/bin/abc161_d.rs"

[[bin]]
name = "abc218-e"
path = "src/bin/abc218_e.rs"

[[bin]]
name = "abc145-d"
path = "src/bin/abc145_d.rs"

[[bin]]
name = "abc156-d"
path = "src/bin/abc156_d.rs"

[[bin]]
name = "abc218-c"
path = "src/bin/abc218_c.rs"

[[bin]]
name = "abc229-e"
path = "src/bin/abc229_e.rs"

[[bin]]
name = "abc153-e"
path = "src/bin/abc153_e.rs"

[[bin]]
name = "abc302-a"
path = "src/bin/abc302_a.rs"

[[bin]]
name = "abc197-c"
path = "src/bin/abc197_c.rs"

[[bin]]
name = "abc269-e"
path = "src/bin/abc269_e.rs"

[[bin]]
name = "abc199-c"
path = "src/bin/abc199_c.rs"

[[bin]]
name = "abc170-d"
path = "src/bin/abc170_d.rs"

[[bin]]
name = "abc314-d"
path = "src/bin/abc314_d.rs"

[[bin]]
name = "abc184-c"
path = "src/bin/abc184_c.rs"

[[bin]]
name = "abc228-d"
path = "src/bin/abc228_d.rs"

[[bin]]
name = "abc160-e"
path = "src/bin/abc160_e.rs"

[[bin]]
name = "abc185-f"
path = "src/bin/abc185_f.rs"

[[bin]]
name = "abc185-d"
path = "src/bin/abc185_d.rs"

[[bin]]
name = "abc323-d"
path = "src/bin/abc323_d.rs"

[[bin]]
name = "abc324-d"
path = "src/bin/abc324_d.rs"

[[bin]]
name = "abc152-d"
path = "src/bin/abc152_d.rs"

[[bin]]
name = "abc288-c"
path = "src/bin/abc288_c.rs"

[[bin]]
name = "abc324-e"
path = "src/bin/abc324_e.rs"

[[bin]]
name = "abc323-e"
path = "src/bin/abc323_e.rs"

[[bin]]
name = "abc291-e"
path = "src/bin/abc291_e.rs"

[[bin]]
name = "abc178-e"
path = "src/bin/abc178_e.rs"

[[bin]]
name = "abc177-e"
path = "src/bin/abc177_e.rs"

[[bin]]
name = "abc166-e"
path = "src/bin/abc166_e.rs"

[[bin]]
name = "abc283-d"
path = "src/bin/abc283_d.rs"

[[bin]]
name = "abc223-d"
path = "src/bin/abc223_d.rs"

[[bin]]
name = "abc148-e"
path = "src/bin/abc148_e.rs"

[[bin]]
name = "abc141-d"
path = "src/bin/abc141_d.rs"

[[bin]]
name = "abc103-c"
path = "src/bin/abc103_c.rs"

[[bin]]
name = "abc260-d"
path = "src/bin/abc260_d.rs"

[[bin]]
name = "abc327-d"
path = "src/bin/abc327_d.rs"

[[bin]]
name = "abc293-d"
path = "src/bin/abc293_d.rs"

[[bin]]
name = "abc260-c"
path = "src/bin/abc260_c.rs"

[[bin]]
name = "abc112-d"
path = "src/bin/abc112_d.rs"

[[bin]]
name = "abc212-d"
path = "src/bin/abc212_d.rs"

[[bin]]
name = "abc171-e"
path = "src/bin/abc171_e.rs"

[[bin]]
name = "abc293-c"
path = "src/bin/abc293_c.rs"

[[bin]]
name = "abc142-d"
path = "src/bin/abc142_d.rs"

[[bin]]
name = "abc194-d"
path = "src/bin/abc194_d.rs"

[[bin]]
name = "arc079-b"
path = "src/bin/arc079_b.rs"

[[bin]]
name = "abc204-d"
path = "src/bin/abc204_d.rs"

[[bin]]
name = "abc197-d"
path = "src/bin/abc197_d.rs"

[[bin]]
name = "abc231-d"
path = "src/bin/abc231_d.rs"

[[bin]]
name = "abc082-b"
path = "src/bin/abc082_b.rs"

[[bin]]
name = "abc239-e"
path = "src/bin/abc239_e.rs"

[[bin]]
name = "abc291-d"
path = "src/bin/abc291_d.rs"

[[bin]]
name = "abc140-d"
path = "src/bin/abc140_d.rs"

[[bin]]
name = "abc216-e"
path = "src/bin/abc216_e.rs"

[[bin]]
name = "abc154-d"
path = "src/bin/abc154_d.rs"

[[bin]]
name = "abc334-d"
path = "src/bin/abc334_d.rs"

[[bin]]
name = "abc324-c"
path = "src/bin/abc324_c.rs"

[[bin]]
name = "abc306-d"
path = "src/bin/abc306_d.rs"

[[bin]]
name = "abc302-d"
path = "src/bin/abc302_d.rs"

[[bin]]
name = "abc340-d"
path = "src/bin/abc340_d.rs"

[[bin]]
name = "abc351-d"
path = "src/bin/abc351_d.rs"

[[bin]]
name = "abc341-d"
path = "src/bin/abc341_d.rs"

[[bin]]
name = "abc244-e"
path = "src/bin/abc244_e.rs"

[[bin]]
name = "abc236-d"
path = "src/bin/abc236_d.rs"

[[bin]]
name = "abc277-e"
path = "src/bin/abc277_e.rs"

[[bin]]
name = "abc282-d"
path = "src/bin/abc282_d.rs"

[[bin]]
name = "abc287-e"
path = "src/bin/abc287_e.rs"

[[bin]]
name = "abc336-d"
path = "src/bin/abc336_d.rs"

[[bin]]
name = "abc347-c"
path = "src/bin/abc347_c.rs"

[[bin]]
name = "abc342-d"
path = "src/bin/abc342_d.rs"

[[bin]]
name = "abc357-d"
path = "src/bin/abc357_d.rs"

[[bin]]
name = "abc127-f"
path = "src/bin/abc127_f.rs"

[[bin]]
name = "abc313-c"
path = "src/bin/abc313_c.rs"

[[bin]]
name = "abc238-d"
path = "src/bin/abc238_d.rs"

[[bin]]
name = "abc333-e"
path = "src/bin/abc333_e.rs"

[[bin]]
name = "abc263-d"
path = "src/bin/abc263_d.rs"

[[bin]]
name = "abc219-d"
path = "src/bin/abc219_d.rs"

[[bin]]
name = "abc246-d"
path = "src/bin/abc246_d.rs"

[[bin]]
name = "abc264-e"
path = "src/bin/abc264_e.rs"

[[bin]]
name = "abc269-d"
path = "src/bin/abc269_d.rs"

[[bin]]
name = "abc339-d"
path = "src/bin/abc339_d.rs"

[[bin]]
name = "abc387-a"
path = "src/bin/abc387_a.rs"

[[bin]]
name = "abc381-d"
path = "src/bin/abc381_d.rs"

[[bin]]
name = "abc387-d"
path = "src/bin/abc387_d.rs"

[[bin]]
name = "abc208-d"
path = "src/bin/abc208_d.rs"

[[bin]]
name = "abc165-c"
path = "src/bin/abc165_c.rs"

[[bin]]
name = "arc091-b"
path = "src/bin/arc091_b.rs"

[[bin]]
name = "abc367-d"
path = "src/bin/abc367_d.rs"

[[bin]]
name = "abc192-e"
path = "src/bin/abc192_e.rs"

[[bin]]
name = "abc275-e"
path = "src/bin/abc275_e.rs"

[[bin]]
name = "abc227-d"
path = "src/bin/abc227_d.rs"

[[bin]]
name = "abc080-c"
path = "src/bin/abc080_c.rs"

[[bin]]
name = "abc198-e"
path = "src/bin/abc198_e.rs"

[[bin]]
name = "abc387-c"
path = "src/bin/abc387_c.rs"

[[bin]]
name = "abc117-d"
path = "src/bin/abc117_d.rs"

[[bin]]
name = "abc336-e"
path = "src/bin/abc336_e.rs"

[[bin]]
name = "arc081-b"
path = "src/bin/arc081_b.rs"

[[bin]]
name = "abc343-d"
path = "src/bin/abc343_d.rs"

[[bin]]
name = "abc340-e"
path = "src/bin/abc340_e.rs"

[[bin]]
name = "abc339-e"
path = "src/bin/abc339_e.rs"

[[bin]]
name = "abc343-f"
path = "src/bin/abc343_f.rs"

[[bin]]
name = "abc272-e"
path = "src/bin/abc272_e.rs"

[[bin]]
name = "abc338-d"
path = "src/bin/abc338_d.rs"

[[bin]]
name = "abc355-d"
path = "src/bin/abc355_d.rs"

[[bin]]
name = "abc320-e"
path = "src/bin/abc320_e.rs"

[[bin]]
name = "abc184-d"
path = "src/bin/abc184_d.rs"

[[bin]]
name = "abc179-d"
path = "src/bin/abc179_d.rs"

[[bin]]
name = "abc257-e"
path = "src/bin/abc257_e.rs"

[[bin]]
name = "abc259-e"
path = "src/bin/abc259_e.rs"

[[bin]]
name = "abc271-e"
path = "src/bin/abc271_e.rs"

[[bin]]
name = "abc255-e"
path = "src/bin/abc255_e.rs"

[[bin]]
name = "abc293-e"
path = "src/bin/abc293_e.rs"

[[bin]]
name = "abc258-e"
path = "src/bin/abc258_e.rs"

[[bin]]
name = "abc238-c"
path = "src/bin/abc238_c.rs"

[[bin]]
name = "abc358-e"
path = "src/bin/abc358_e.rs"

[[bin]]
name = "abc366-d"
path = "src/bin/abc366_d.rs"

[[bin]]
name = "abc352-d"
path = "src/bin/abc352_d.rs"

[[bin]]
name = "abc342-e"
path = "src/bin/abc342_e.rs"

[[bin]]
name = "abc359-e"
path = "src/bin/abc359_e.rs"

[[bin]]
name = "abc393-f"
path = "src/bin/abc393_f.rs"

[[bin]]
name = "abc392-f"
path = "src/bin/abc392_f.rs"

[[bin]]
name = "abc391-f"
path = "src/bin/abc391_f.rs"

[[bin]]
name = "abc396-e"
path = "src/bin/abc396_e.rs"

[[bin]]
name = "abc371-e"
path = "src/bin/abc371_e.rs"

[[bin]]
name = "abc380-e"
path = "src/bin/abc380_e.rs"

[[bin]]
name = "abc353-e"
path = "src/bin/abc353_e.rs"

[[bin]]
name = "abc377-d"
path = "src/bin/abc377_d.rs"

[[bin]]
name = "abc381-e"
path = "src/bin/abc381_e.rs"

[[bin]]
name = "abc362-e"
path = "src/bin/abc362_e.rs"

[[bin]]
name = "abc350-e"
path = "src/bin/abc350_e.rs"

[[bin]]
name = "abc300-e"
path = "src/bin/abc300_e.rs"

[[bin]]
name = "abc325-d"
path = "src/bin/abc325_d.rs"

[[bin]]
name = "abc282-c"
path = "src/bin/abc282_c.rs"

[[bin]]
name = "abc361-c"
path = "src/bin/abc361_c.rs"

[[bin]]
name = "abc337-d"
path = "src/bin/abc337_d.rs"

[[bin]]
name = "abc352-e"
path = "src/bin/abc352_e.rs"

[[bin]]
name = "abc415-d"
path = "src/bin/abc415_d.rs"

[[bin]]
name = "abc379-c"
path = "src/bin/abc379_c.rs"

[[bin]]
name = "abc413-d"
path = "src/bin/abc413_d.rs"

[[bin]]
name = "abc372-e"
path = "src/bin/abc372_e.rs"

[[bin]]
name = "abc182-e"
path = "src/bin/abc182_e.rs"

[[bin]]
name = "abc410-d"
path = "src/bin/abc410_d.rs"

[[bin]]
name = "abc410-e"
path = "src/bin/abc410_e.rs"

[[bin]]
name = "abc420-d"
path = "src/bin/abc420_d.rs"

[[bin]]
name = "abc420-e"
path = "src/bin/abc420_e.rs"

[[bin]]
name = "abc416-d"
path = "src/bin/abc416_d.rs"

[[bin]]
name = "abc415-e"
path = "src/bin/abc415_e.rs"

[[bin]]
name = "abc399-d"
path = "src/bin/abc399_d.rs"

[[bin]]
name = "abc401-d"
path = "src/bin/abc401_d.rs"

[[bin]]
name = "abc321-d"
path = "src/bin/abc321_d.rs"

[[bin]]
name = "abc297-e"
path = "src/bin/abc297_e.rs"

[[bin]]
name = "abc241-d"
path = "src/bin/abc241_d.rs"

[[bin]]
name = "abc408-e"
path = "src/bin/abc408_e.rs"

[[bin]]
name = "abc198-d"
path = "src/bin/abc198_d.rs"

[[bin]]
name = "abc273-d"
path = "src/bin/abc273_d.rs"

[[bin]]
name = "abc310-e"
path = "src/bin/abc310_e.rs"

[[bin]]
name = "abc319-c"
path = "src/bin/abc319_c.rs"

[[bin]]
name = "abc329-f"
path = "src/bin/abc329_f.rs"

[[bin]]
name = "abc286-e"
path = "src/bin/abc286_e.rs"

[[bin]]
name = "abc418-e"
path = "src/bin/abc418_e.rs"

[dependencies]
rpds = "=1.1.1"
rand_xorshift = "=0.4.0"
rand_xoshiro = "=0.7.0"
statrs = "=0.18.0"
primal = "=0.3.3"
thiserror = "=2.0.16"
ac-library-rs = "=0.2.0"
once_cell = "=1.21.3"
static_assertions = "=1.1.0"
varisat = "=0.2.2"
memoise = "=0.3.2"
argio = "=0.2.0"
bitvec = "=1.0.1"
counter = "=0.7.0"
hashbag = "=0.1.12"
pathfinding = "=4.14.0"
recur-fn = "=2.2.0"
indexing = { version = "=0.4.1", features = ["experimental_pointer_ranges"] }
amplify = { version = "=4.9.0", features = [
    "c_raw",
    "rand",
    "stringly_conversions",
] }
amplify_derive = "=4.0.1"
amplify_num = { version = "=0.5.3", features = ["std"] }
easy-ext = "=1.0.2"
multimap = "=0.10.1"
btreemultimap = "=0.1.1"
bstr = "=1.12.0"
az = "=1.2.1"
glidesort = "=0.1.2"
tap = "=1.0.1"
omniswap = "=0.1.0"
multiversion = "=0.8.0"
num = "=0.4.3"
num-bigint = "=0.4.6"
num-complex = "=0.4.6"
num-integer = "=0.1.46"
num-iter = "=0.1.45"
num-rational = "=0.4.2"
num-traits = "=0.2.19"
num-derive = "=0.4.2"
ndarray = "=0.16.1"
nalgebra = "=0.34.0"
alga = "=0.9.3"
libm = "=0.2.15"
rand = "=0.9.2"
getrandom = "=0.3.3"
rand_chacha = "=0.9.0"
rand_core = "=0.9.3"
rand_hc = "=0.4.0"
rand_pcg = "=0.9.0"
rand_distr = "=0.5.1"
petgraph = "=0.8.2"
indexmap = "=2.11.0"
regex = "=1.11.2"
lazy_static = "=1.5.0"
ordered-float = "=5.0.0"
ascii = "=1.1.0"
permutohedron = "=0.2.4"
superslice = "=1.0.0"
itertools = "=0.14.0"
itertools-num = "=0.1.3"
maplit = "=1.0.2"
either = "=1.15.0"
im-rc = "=15.1.0"
fixedbitset = "=0.5.7"
bitset-fixed = "=0.1.0"
proconio = { version = "=0.5.0", features = ["derive"] }
text_io = "=0.1.13"
rustc-hash = "=2.1.1"
smallvec = { version = "=1.15.1", features = [
    "const_generics",
    "const_new",
    "write",
    "union",
    "serde",
    "arbitrary",
] }

[dev-dependencies]
