[package]
name = "trainings_abc_d_e"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-compete.bin]
abc212-d = { alias = "abc212_d", problem = "https://atcoder.jp/contests/abc212/tasks/abc212_d" }
abc213-d = { alias = "abc213_d", problem = "https://atcoder.jp/contests/abc213/tasks/abc213_d"}
abc214-d = { alias = "abc214_d", problem = "https://atcoder.jp/contests/abc214/tasks/abc214_d"}
abc215-d = { alias = "abc215_d", problem = "https://atcoder.jp/contests/abc215/tasks/abc215_d"}
abc216-d = { alias = "abc216_d", problem = "https://atcoder.jp/contests/abc216/tasks/abc216_d"}
abc217-d = { alias = "abc217_d", problem = "https://atcoder.jp/contests/abc217/tasks/abc217_d"}
abc218-d = { alias = "abc218_d", problem = "https://atcoder.jp/contests/abc218/tasks/abc218_d"}
abc219-d = { alias = "abc219_d", problem = "https://atcoder.jp/contests/abc219/tasks/abc219_d"}
abc220-d = { alias = "abc220_d", problem = "https://atcoder.jp/contests/abc220/tasks/abc220_d"}
abc221-d = { alias = "abc221_d", problem = "https://atcoder.jp/contests/abc221/tasks/abc221_d"}
abc222-d = { alias = "abc222_d", problem = "https://atcoder.jp/contests/abc222/tasks/abc222_d"}
abc223-d = { alias = "abc223_d", problem = "https://atcoder.jp/contests/abc223/tasks/abc223_d"}
abc224-d = { alias = "abc224_d", problem = "https://atcoder.jp/contests/abc224/tasks/abc224_d"}
abc225-d = { alias = "abc225_d", problem = "https://atcoder.jp/contests/abc225/tasks/abc225_d"}
abc226-d = { alias = "abc226_d", problem = "https://atcoder.jp/contests/abc226/tasks/abc226_d"}
abc227-d = { alias = "abc227_d", problem = "https://atcoder.jp/contests/abc227/tasks/abc227_d"}

[[bin]]
name = "abc212-d"
path = "src/bin/abc212_d.rs"

[[bin]]
name = "abc213-d"
path = "src/bin/abc213_d.rs"

[[bin]]
name = "abc214-d"
path = "src/bin/abc214_d.rs"

[[bin]]
name = "abc215-d"
path = "src/bin/abc215_d.rs"

[[bin]]
name = "abc216-d"
path = "src/bin/abc216_d.rs"

[[bin]]
name = "abc217-d"
path = "src/bin/abc217_d.rs"

[[bin]]
name = "abc218-d"
path = "src/bin/abc218_d.rs"

[[bin]]
name = "abc219-d"
path = "src/bin/abc219_d.rs"

[[bin]]
name = "abc220-d"
path = "src/bin/abc220_d.rs"

[[bin]]
name = "abc221-d"
path = "src/bin/abc221_d.rs"

[[bin]]
name = "abc222-d"
path = "src/bin/abc222_d.rs"

[[bin]]
name = "abc223-d"
path = "src/bin/abc223_d.rs"

[[bin]]
name = "abc224-d"
path = "src/bin/abc224_d.rs"

[[bin]]
name = "abc225-d"
path = "src/bin/abc225_d.rs"

[[bin]]
name = "abc226-d"
path = "src/bin/abc226_d.rs"

[[bin]]
name = "abc227-d"
path = "src/bin/abc227_d.rs"

[dependencies]
ac-library-rs = "=0.1.1"
once_cell = "=1.18.0"
static_assertions = "=1.1.0"
varisat = "=0.2.2"
memoise = "=0.3.2"
argio = "=0.2.0"
bitvec = "=1.0.1"
counter = "=0.5.7"
hashbag = "=0.1.11"
pathfinding = "=4.3.0"
recur-fn = "=2.2.0"
indexing = "=0.4.1"
amplify = "=3.14.2"
amplify_derive = "=2.11.3"
amplify_num = "=0.4.1"
easy-ext = "=1.0.1"
multimap = "=0.9.0"
btreemultimap = "=0.1.1"
bstr = "=1.6.0"
az = "=1.2.1"
glidesort = "=0.1.2"
tap = "=1.0.1"
omniswap = "=0.1.0"
multiversion = "=0.7.2"
num = "=0.4.1"
num-bigint = "=0.4.3"
num-complex = "=0.4.3"
num-integer = "=0.1.45"
num-iter = "=0.1.43"
num-rational = "=0.4.1"
num-traits = "=0.2.15"
num-derive = "=0.4.0"
ndarray = "=0.15.6"
nalgebra = "=0.32.3"
alga = "=0.9.3"
libm = "=0.2.7"
rand = "=0.8.5"
getrandom = "=0.2.10"
rand_chacha = "=0.3.1"
rand_core = "=0.6.4"
rand_hc = "=0.3.2"
rand_pcg = "=0.3.1"
rand_distr = "=0.4.3"
petgraph = "=0.6.3"
indexmap = "=2.0.0"
regex = "=1.9.1"
lazy_static = "=1.4.0"
ordered-float = "=3.7.0"
ascii = "=1.1.0"
permutohedron = "=0.2.4"
superslice = "=1.0.0"
itertools = "=0.11.0"
itertools-num = "=0.1.3"
maplit = "=1.0.2"
either = "=1.8.1"
im-rc = "=15.1.0"
fixedbitset = "=0.4.2"
bitset-fixed = "=0.1.0"
proconio = "=0.4.5"
text_io = "=0.1.12"
rustc-hash = "=1.1.0"
smallvec = "=1.11.0"

[dev-dependencies]
